--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
   },
   "proxy": {
     "/api": {
-      "target": "http://localhost:3001"
+      "target": "http://10.110.108.59:3001"
     }
   }
 }
